# GraphAgg-MT

./: CMakeLists.txt  README.md  autoBuild.sh
algo/: CMakeLists.txt
algo/BellmanFord/: BellmanFord.cpp  BellmanFord.h  BellmanFordGPU.cpp  BellmanFordGPU.h  BellmanFordGPU_impl.cpp  BellmanFord_impl.cpp  CMakeLists.txt
algo/BellmanFord/kernel_src/: BellmanFordGPU_kernel.cu  BellmanFordGPU_kernel.h
algo/ConnectedComponent/: CMakeLists.txt  ConnectedComponent.cpp  ConnectedComponent.h  ConnectedComponentGPU.cpp  ConnectedComponentGPU.h  ConnectedComponentGPU_impl.cpp  ConnectedComponent_impl.cpp
algo/ConnectedComponent/kernel_src/: ConnectedComponentGPU_kernel.cu  ConnectedComponentGPU_kernel.h
algo/CubeAgg/: CMakeLists.txt  CubeAgg.cpp  CubeAgg.h
algo/DDFS/: CMakeLists.txt  DDFS.cpp  DDFS.h  DDFSGPU.h  DDFSGPU_impl.cpp  DDFS_impl.cpp
algo/LabelPropagation/: CMakeLists.txt  LabelPropagation.cpp  LabelPropagation.h  LabelPropagation_impl.cpp
algo/StronglyConnectedComponent/: CMakeLists.txt  StronglyConnectedComponent.cpp  StronglyConnectedComponent.h  StronglyConnectedComponentGPU.cpp  StronglyConnectedComponentGPU.h  StronglyConnectedComponent_impl.cpp
core/: AbstractGraph.cpp  AbstractGraph.h  CMakeLists.txt  Graph.cpp  Graph.h  GraphUtil.cpp  GraphUtil.h  MessageSet.cpp  MessageSet.h
core/impl/: GraphUtil_impl.cpp  Graph_impl.cpp  MessageSet_impl.cpp
include/: GPUconfig.h  UNIX_marco.h  deps.h
srv/: CMakeLists.txt  UNIX_msg.cpp  UNIX_msg.h  UNIX_shm.cpp  UNIX_shm.h  UtilClient.cpp  UtilClient.h  UtilServer.cpp  UtilServer.h
srv/impl/: UtilClient_impl.cpp  UtilServer_impl.cpp  UtilServer_implGPU.cpp
test/: BellmanFordGPUTest.cpp  BellmanFordTest.cpp  CMakeLists.txt  ConnectedComponentTest.cpp  CubeAggTest.cpp  GraphAccessTest.cpp  GraphUtilTest.cpp  LabelPropagationTest.cpp  SRVTest_cli.cpp  SRVTest_srv.cpp  UtilClientTest.cpp  UtilClientTest_CubeAgg.cpp  UtilServerTest_BellmanFord.cpp  UtilServerTest_BellmanFordGPU.cpp  UtilServerTest_CubeAgg.cpp  UtilServerTest_LabelPropagation.cpp  clientRunTest_100k_2m.sh  ipcrm.sh  ipcrm_32.sh  ipcrm_userDefine.cpp  mpi_CubeAggTest.sh  sbatch_CubeAgg.sh  serverRunTest_100k_2m.sh  testGraphEdge.txt  testGraphVertex.txt
tool/: CMakeLists.txt  RandGraphGen.cpp
util/: CMakeLists.txt  TIsExtended.hpp
